# MazeRunner

./: .coverage  README.md  pyproject.toml
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: .coverage  pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko2/unicafe/: .coverage
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: monopoli_kaavio.md  sekvenssikaavio.md
poetry-testi/: pyproject.toml
poetry-testi/src/: index.py
project/: .pylintrc  pyproject.toml  tasks.py
project/src/: Main.py  events.py  game.py  game_over.py  level.py  renderer.py  start_game.py
project/src/database/: data.txt  database.py
project/src/services/: events.py  game.py
project/src/sprites/: monster.py  player.py
project/src/tests/: end_screen_test.py  events_test.py  game_test.py  game_tests.py  monster_test.py  player_test.py  start_screen_test.py
project/src/ui/: game_over.py  level.py  levels.py  renderer.py  start_game.py
