[tool.poetry]
name = "poetry-testi"
version = "0.1.0"
description = ""
authors = ["emma <emmasofia@live.fi>"]
readme = "README.md"
packages = [{include = "poetry_testi"}]

[tool.poetry.dependencies]
python = "^3.8"
cowsay = "^2.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^6.1.2"
